# ChangeLog for app-accessibility/flite
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-accessibility/flite/ChangeLog,v 1.23 2008/01/26 20:34:29 williamh Exp $

  26 Jan 2008; William Hubbs <williamh@gentoo.org> flite-1.3.ebuild:
  Flite 1.3 is not paralell build safe, so I added -j1 to the call to emake in
  src_compile for bug #201786.
  Also fixed some quoting.

  24 Jan 2008; William Hubbs <williamh@gentoo.org> flite-1.3.ebuild:
  Added back ~hppa.

*flite-1.3 (24 Jan 2008)

  24 Jan 2008; William Hubbs <williamh@gentoo.org>
  +files/flite-1.3-alsa-support.patch, +files/flite-1.3-shared-libs.patch,
  +flite-1.3.ebuild:
  Version bump.
  The patches for alsa support and shared libraries were retrieved from
  http://dialogpalette.sourceforge.net/extras.html.

  11 Jan 2008; Jeroen Roovers <jer@gentoo.org> flite-1.2-r1.ebuild:
  Stable for HPPA (bug #204504).

  03 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  flite-1.2-r1.ebuild:
  Masked flite-1.2-r1.ebuild stable for ppc

  15 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> -flite-1.2.ebuild:
  Removing old version.

  15 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> flite-1.2-r1.ebuild:
  Stable sparc.

  22 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> flite-1.2-r1.ebuild:
  ~sparc

  15 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org> flite-1.2-r1.ebuild:
  Stable x86.

  14 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org> flite-1.2-r1.ebuild:
  Stable amd64.

*flite-1.2-r1 (30 May 2004)

  30 May 2004; Jon Hood <squinky86@gentoo.org> -flite-1.0.ebuild,
  +flite-1.2-r1.ebuild, files/const.patch:
  remove old versions, use a higher quality voice thanks to Ingo Bormuth
  <ingo@bormuth.org> (#47635); added patch from Michael Gorse
  <mgorse@alum.wpi.edu> (#52466)
