@@ -1,6 +1,10 @@
 # ChangeLog for app-accessibility/speech-dispatcher
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speech-dispatcher/ChangeLog,v 1.30 2008/03/24 23:38:14 fmccor Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speech-dispatcher/ChangeLog,v 1.31 2008/04/06 19:48:26 klausman Exp $
+
+  06 Apr 2008; Tobias Klausmann <klausman@gentoo.org>
+  speech-dispatcher-0.6.5.ebuild:
+  Keyworded on alpha, bug #204504
 
   24 Mar 2008; Ferris McCormick <fmccor@gentoo.org>
   speech-dispatcher-0.6.5.ebuild, speech-dispatcher-0.6.6.ebuild:
