@@ -1,6 +1,9 @@
 # ChangeLog for app-accessibility/flite
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/flite/ChangeLog,v 1.23 2008/01/26 20:34:29 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/flite/ChangeLog,v 1.24 2008/04/06 19:45:47 klausman Exp $
+
+  06 Apr 2008; Tobias Klausmann <klausman@gentoo.org> flite-1.2-r1.ebuild:
+  Keyworded on alpha, bug #204504
 
   26 Jan 2008; William Hubbs <williamh@gentoo.org> flite-1.3.ebuild:
   Flite 1.3 is not paralell build safe, so I added -j1 to the call to emake in
